# chess

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: build.yml
assets/models/board/: board.mtl
include/lois/: exponentielle.hpp  gamma.hpp  geometrique.hpp
lib/glm/: CMakeLists.txt
lib/glmax/: CMakeLists.txt
lib/glmax/src/: Camera.cpp  Camera.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
lib/quick_imgui/: CMakeLists.txt  README.md
lib/quick_imgui/include/quick_imgui/: quick_imgui.hpp
lib/quick_imgui/lib/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
lib/quick_imgui/lib/imgui/backends/: imgui_impl_wgpu.cpp
lib/quick_imgui/lib/imgui/misc/cpp/: imgui_stdlib.cpp  imgui_stdlib.h
lib/quick_imgui/src/: AverageTime.cpp  ImGuiWrapper.cpp  ImGuiWrapper.hpp  quick_imgui.cpp
shaders/: model.fs.glsl  model.vs.glsl
src/: Chess.cpp  Chess.hpp  Model3D.cpp  Model3D.hpp  Piece.cpp  Piece.hpp  main.cpp
src/buffers/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
src/lois/: bernoulli.hpp  binomial.hpp  exponentielle.hpp  gamma.hpp  geometrique.hpp  normale.hpp  poisson.hpp  uniforme.hpp
